added: agent patching